Update redirect URL in index.html

--- a/jfof/index.html
+++ b/jfof/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Redirecting…</title>
     <link rel="canonical" href="https://arxiv.org/">
-    <meta http-equiv="refresh" content="0; url=https://TARGET-URL.example/">
+    <meta http-equiv="refresh" content="0; url=https://arxiv.org/">
     <script>
       // JS redirect as a fallback for some crawlers
       window.location.replace("https://arxiv.org/");
