Update redirect to new PDF link

--- a/jfof/index.html
+++ b/jfof/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Redirecting…</title>
-    <link rel="canonical" href="https://arxiv.org/">
-    <meta http-equiv="refresh" content="0; url=https://arxiv.org/">
+    <link rel="canonical" href="https://github.com/bhorowitz/bhorowitz.github.io/raw/master/assets/jFOF_sub.pdf">
+    <meta http-equiv="refresh" content="0; url=https://github.com/bhorowitz/bhorowitz.github.io/raw/master/assets/jFOF_sub.pdf">
     <script>
       // JS redirect as a fallback for some crawlers
-      window.location.replace("https://arxiv.org/");
+      window.location.replace("https://github.com/bhorowitz/bhorowitz.github.io/raw/master/assets/jFOF_sub.pdf");
     </script>
   </head>
   <body>
-    <p>If you are not redirected, <a href="https://arxiv.org/">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://github.com/bhorowitz/bhorowitz.github.io/raw/master/assets/jFOF_sub.pdf">click here</a>.</p>
   </body>
 </html>
